// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiAssoDtoAdapter rnaStructureToAssociation should transform to association 1`] = `
Object {
  "adresse_siege_rna": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": Object {
        "code_postal": "42424",
        "commune": "Londre",
        "numero": "18",
        "type_voie": "RUE",
        "voie": "MEURIS",
      },
    },
  ],
  "code_objet_social_1": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "conduite d'activités économiques",
    },
  ],
  "date_creation_rna": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 1998-02-07T00:00:00.000Z,
    },
  ],
  "date_modification_rna": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "object",
      "value": 2023-01-12T00:00:00.000Z,
    },
  ],
  "date_rup": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "2018-05-13",
    },
  ],
  "denomination_rna": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "Asso qui n'existe pas",
    },
  ],
  "nature": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "Simplement déclarée",
    },
  ],
  "objet_social": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "Object social !",
    },
  ],
  "rna": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "string",
      "value": "W000000000",
    },
  ],
  "rup": Array [
    Object {
      "last_update": 2023-01-12T00:00:00.000Z,
      "provider": "RNA",
      "type": "boolean",
      "value": true,
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter sirenStructureToAssociation should transform to association 1`] = `
Object {
  "adresse_siege_siren": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": "42424",
        "commune": "Londre",
        "numero": "18",
        "type_voie": "RUE",
        "voie": "MEURIS",
      },
    },
  ],
  "categorie_juridique": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "9220",
    },
  ],
  "date_creation_siren": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 1993-01-11T00:00:00.000Z,
    },
  ],
  "date_modification_siren": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": 2019-11-28T00:00:00.000Z,
    },
  ],
  "denomination_siren": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "Je suis un fause asso",
    },
  ],
  "etablisements_siret": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Array [
        "123004648000021",
        "123004648000013",
      ],
    },
  ],
  "nic_siege": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00002",
    },
  ],
  "siren": Array [
    Object {
      "last_update": 2019-11-28T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "1230046480",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement with contact 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": Array [
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "civilite": undefined,
          "email": undefined,
          "nom": "Jedusor",
          "prenom": "Tom",
          "role": undefined,
          "telephone": undefined,
        },
      },
    ],
  ],
  "information_banquaire": Array [],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00000",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": Array [
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "civilite": undefined,
          "email": undefined,
          "nom": "Jedusor",
          "prenom": "Tom",
          "role": undefined,
          "telephone": undefined,
        },
      },
    ],
  ],
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement with rib 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": Array [],
  "information_banquaire": Array [
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "bic": "BIC_TEST",
          "iban": "TEST",
        },
      },
    ],
    Array [
      Object {
        "last_update": 2010-01-01T00:00:00.000Z,
        "provider": "Le Compte Asso",
        "type": "object",
        "value": Object {
          "bic": "BIC_TEST 2",
          "iban": "TEST 2",
        },
      },
    ],
  ],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00000",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": Array [],
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100000",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement without contact 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": undefined,
  "information_banquaire": Array [],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00001",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": undefined,
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100001",
    },
  ],
}
`;

exports[`ApiAssoDtoAdapter toEtablissement should return etablissement without rib 1`] = `
Object {
  "adresse": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "object",
      "value": Object {
        "code_postal": undefined,
        "commune": undefined,
        "numero": undefined,
        "type_voie": undefined,
        "voie": undefined,
      },
    },
  ],
  "contacts": Array [],
  "information_banquaire": Array [],
  "nic": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "00001",
    },
  ],
  "ouvert": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "representants_legaux": Array [],
  "siege": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "undefined",
      "value": undefined,
    },
  ],
  "siret": Array [
    Object {
      "last_update": 2010-01-01T00:00:00.000Z,
      "provider": "SIREN",
      "type": "string",
      "value": "50922194100001",
    },
  ],
}
`;
